--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://amenasyed.github.io/amenasyed.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -24,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,4 +49,7 @@
       "last 1 safari version"
     ]
   },
+  "devDependencies": {
+    "gh-pages":"4.0.0"
+  }
 }
